# KNU_Project2_RC

./: .gitignore  README.md  hi  pixi.toml  sync.js
.github/workflows/: notion-sync.yml
docs/: 종합설계프로젝트2.md
docs/논문/: 논문.md
docs/명령어/: 명령어.md
docs/문서/: 문서.md
docs/문서/Change Request/: Change Request.md
docs/문서/Configuration Management Plan/: Configuration Management Plan.md
docs/문서/Issue_Defect Report/: Issue_Defect Report.md
docs/문서/QA Plan/: QA Plan.md
docs/문서/R&R/: R&R.md
docs/문서/Risk/: Risk.md
docs/문서/SAD _ ICD/: SAD _ ICD.md
docs/문서/SDS 설계 사양서 [하드웨어]/: SDS 설계 사양서 [하드웨어].md
docs/문서/SITS _ SITR/: SITS _ SITR.md
docs/문서/SRS 요구 사항서/: SRS 요구 사항서.md
docs/문서/STM32/: STM32.md
docs/문서/SWAD _ SWICD/: SWAD _ SWICD.md
docs/문서/SWDD/: SWDD.md
docs/문서/SWRS 요구 사항서/: SWRS 요구 사항서.md
docs/문서/아두이노 ide stm32설치/: 아두이노 ide stm32설치.md
docs/문서/아두이노 ide stm32설치 (1)/: 아두이노 ide stm32설치 (1).md
docs/발표/: 발표.md
docs/회의/: 회의.md
docs/회의/2603 [2주차]/: 2603 [2주차].md
docs/회의/2603 [3주차]/: 2603 [3주차].md
docs/회의/2603 [4주차]/: 2603 [4주차].md
docs/회의/2603 [5주차]/: 2603 [5주차].md
docs/회의/260307 [멘토]/: 260307 [멘토].md
docs/회의/260311 [교수님]/: 260311 [교수님].md
docs/회의/260314 [멘토]/: 260314 [멘토].md
docs/회의/260320 [멘토]/: 260320 [멘토].md
documents/: 종합설계프로젝트2.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/auto_rc/: CMakeLists.txt  package.xml
src/auto_rc/launch/: display.launch.py  sim.launch.py
src/auto_rc/urdf/: auto_rc.urdf.xacro
(+36 files in other folders)
